--- a/starRating/starRating.css
+++ b/starRating/starRating.css
@@ -3,14 +3,14 @@
     align-items: center;
     flex: 0 0 auto;
     justify-content: center;
-    margin-left: .5rem;
-    margin-right: .5rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
     transition: all 0.3s ease;
-    flex-wrap: wrap
+    flex-wrap: wrap;
 }
 
 .star-container + .star {
-    margin-left: .5rem;
+    margin-left: 0.5rem;
 }
 
 .star-container .star,
@@ -46,10 +46,10 @@
 .rating {
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
 }
 .rating:focus {
-  outline: none;
+    outline: none;
 }
 
 .rating.direction-rtl {
@@ -75,24 +75,24 @@
     transform: scale(-1, 1);
 }
 
-.rating.space-none .star{
-  margin: 0px;
+.rating.space-none .star {
+    margin: 0px;
 }
 
-.rating.space-small .star{
-  margin: 0 .25rem;
+.rating.space-small .star {
+    margin: 0 0.25rem;
 }
 
-.rating.space-medium .star{
-  margin: 0 .5rem;
+.rating.space-medium .star {
+    margin: 0 0.5rem;
 }
 
-.rating.space-large .star{
-  margin: 0 .75rem;
+.rating.space-large .star {
+    margin: 0 0.75rem;
 }
 
-.rating.space-xlarge .star{
-  margin: 0 1rem;
+.rating.space-xlarge .star {
+    margin: 0 1rem;
 }
 
 /**Label position starts **/
@@ -101,7 +101,7 @@
 }
 
 .rating.label-hidden {
-  display: block;
+    display: block;
 }
 
 .rating.label-visible {
@@ -115,11 +115,11 @@
 .rating.label-top .label-value + .star-container {
     margin-left: 0;
     margin-right: 0;
-    margin-top: .5rem;
+    margin-top: 0.5rem;
 }
 
 .rating.label-left .label-value {
-    margin-left: .5rem;
+    margin-left: 0.5rem;
     margin-right: 0;
 }
 
@@ -155,8 +155,8 @@
     cursor: unset;
 }
 
-.rating.read-only .star-container .star{
-  cursor: unset;
+.rating.read-only .star-container .star {
+    cursor: unset;
 }
 .rating.small .star,
 .star.small {
@@ -650,12 +650,21 @@
 .rating.hover:hover.hover-4 .star-container .star svg.star-empty,
 .rating.hover:hover.hover-5 .star-container .star svg.star-empty,
 .rating.hover:hover.hover-6 .star-container .star svg.star-empty,
+.rating.hover:hover.hover-7.star-container .star svg.star-empty,
+.rating.hover:hover.hover-8 .star-container .star svg.star-empty,
+.rating.hover:hover.hover-9 .star-container .star svg.star-empty,
+.rating.hover:hover.hover-10 .star-container .star svg.star-empty,
+
 .rating.hover:hover.value-1.half .star-container .star svg.star-empty,
 .rating.hover:hover.value-2.half .star-container .star svg.star-empty,
 .rating.hover:hover.value-3.half .star-container .star svg.star-empty,
 .rating.hover:hover.value-4.half .star-container .star svg.star-empty,
 .rating.hover:hover.value-5.half .star-container .star svg.star-empty,
 .rating.hover:hover.value-6.half .star-container .star svg.star-empty,
+.rating.hover:hover.value-7.half .star-container .star svg.star-empty,
+.rating.hover:hover.value-8.half .star-container .star svg.star-empty,
+.rating.hover:hover.value-9.half .star-container .star svg.star-empty,
+.rating.hover:hover.value-10.half .star-container .star svg.star-empty,
 .rating.value-0.half
     .rating.hover.star:hover.value-1:nth-child(1)
     .star-container
@@ -882,6 +891,25 @@
 .rating.value-4.half .star-container .star:nth-child(5) svg.star-filled,
 .rating.value-5.half .star-container .star:nth-child(6) svg.star-empty,
 .rating.value-5.half .star-container .star:nth-child(6) svg.star-filled,
+
+.rating.value-6.half .star-container .star:nth-child(7) svg.star-empty,
+.rating.value-6.half .star-container .star:nth-child(7) svg.star-filled,
+
+.rating.value-7.half .star-container .star:nth-child(8) svg.star-empty,
+.rating.value-7.half .star-container .star:nth-child(8) svg.star-filled,
+
+.rating.value-8.half .star-container .star:nth-child(9) svg.star-empty,
+.rating.value-8.half .star-container .star:nth-child(9) svg.star-filled,
+
+.rating.value-9.half .star-container .star:nth-child(10) svg.star-empty,
+.rating.value-9.half .star-container .star:nth-child(10) svg.star-filled,
+
+.rating.value-9.half .star-container .star:nth-child(10) svg.star-empty,
+.rating.value-9.half .star-container .star:nth-child(10) svg.star-filled,
+
+.rating.value-10.half .star-container .star:nth-child(11) svg.star-empty,
+.rating.value-10.half .star-container .star:nth-child(11) svg.star-filled,
+
 .star.half svg.star-empty,
 .star.half svg.star-filled {
     opacity: 0;
@@ -893,6 +921,11 @@
 .rating.value-3.half .star-container .star:nth-child(4) svg.star-half,
 .rating.value-4.half .star-container .star:nth-child(5) svg.star-half,
 .rating.value-5.half .star-container .star:nth-child(6) svg.star-half,
+.rating.value-6.half .star-container .star:nth-child(7) svg.star-half,
+.rating.value-7.half .star-container .star:nth-child(8) svg.star-half,
+.rating.value-8.half .star-container .star:nth-child(9) svg.star-half,
+.rating.value-9.half .star-container .star:nth-child(10) svg.star-half,
+.rating.value-10.half .star-container .star:nth-child(11) svg.star-half,
 .star.half svg.star-half {
     opacity: 1;
 }
@@ -961,20 +994,8 @@
     .star-container
     .star:nth-child(-n + 10)
     svg.star-filled,
-.rating.hover:hover.hover-11
-    .star-container
-    .star:nth-child(-n + 11)
-    svg.star-filled,
-.rating.hover:hover.hover-12
-    .star-container
-    .star:nth-child(-n + 12)
-    .rating.value-1
-    .star-container
-    .star:nth-child(-n + 1)
-    svg.star-empty,
+.rating.value-1 .star-container .star:nth-child(-n + 1) svg.star-empty,
 .rating.value-1 .star-container .star:nth-child(-n + 1) svg.star-filled,
-.rating.value-10 .star-container .star:nth-child(-n + 10) svg.star-empty,
-.rating.value-10 .star-container .star:nth-child(-n + 10) svg.star-filled,
 .rating.value-2 .star-container .star:nth-child(-n + 2) svg.star-empty,
 .rating.value-2 .star-container .star:nth-child(-n + 2) svg.star-filled,
 .rating.value-3 .star-container .star:nth-child(-n + 3) svg.star-empty,
@@ -991,6 +1012,8 @@
 .rating.value-8 .star-container .star:nth-child(-n + 8) svg.star-filled,
 .rating.value-9 .star-container .star:nth-child(-n + 9) svg.star-empty,
 .rating.value-9 .star-container .star:nth-child(-n + 9) svg.star-filled,
+.rating.value-10 .star-container .star:nth-child(-n + 10) svg.star-empty,
+.rating.value-10 .star-container .star:nth-child(-n + 10) svg.star-filled,
 .star.filled svg.star-empty,
 .star.filled svg.star-filled {
     opacity: 0;
@@ -1036,16 +1059,7 @@
     .star-container
     .star:nth-child(-n + 10)
     svg.star-filled,
-.rating.hover:hover.hover-11
-    .star-container
-    .star:nth-child(-n + 11)
-    svg.star-filled,
-.rating.hover:hover.hover-12
-    .star-container
-    .star:nth-child(-n + 12)
-    svg.star-filled,
 .rating.value-1 .star-container .star:nth-child(-n + 1) svg.star-filled,
-.rating.value-10 .star-container .star:nth-child(-n + 10) svg.star-filled,
 .rating.value-2 .star-container .star:nth-child(-n + 2) svg.star-filled,
 .rating.value-3 .star-container .star:nth-child(-n + 3) svg.star-filled,
 .rating.value-4 .star-container .star:nth-child(-n + 4) svg.star-filled,
@@ -1054,6 +1068,7 @@
 .rating.value-7 .star-container .star:nth-child(-n + 7) svg.star-filled,
 .rating.value-8 .star-container .star:nth-child(-n + 8) svg.star-filled,
 .rating.value-9 .star-container .star:nth-child(-n + 9) svg.star-filled,
+.rating.value-10 .star-container .star:nth-child(-n + 10) svg.star-filled,
 .star.filled svg.star-filled {
     opacity: 1;
 }
